<resources>
    <string name="app_name">Go nigiri</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_login">Iniciar sesion</string>
    <string name="DontHaveAccount">¿No tienes cuenta?,</string>
    <string name="CreateAnAccountHere">Crea una aquí.</string>
    <string name="userEmailRegistry">Correo:</string>
    <string name="userNameRegistry">Nombre:</string>
    <string name="userNicknameRegistry">Usuario:</string>
    <string name="userPasswordRegistry">Contraseña:</string>
    <string name="userConfirmPasswordRegistry">Confirmar contraseña:</string>
    <string name="userRegistryAccept">Registrarse</string>
    <string name="toolbar_tittle_create_acount">Crear cuenta</string>
    <string name="cardview_level1">Nivel 1</string>
    <string name="tab_dictionary">Diccionarios</string>
    <string name="tab_userhome">Menu</string>
    <string name="tab_userprofile">Perfil</string>
    <string name="title_activity_details">Detalles</string>
    <string name="imageDesc">Tamaño Original</string>
    <string name="instructions_memory">Como podrás imaginar, el concéntrese es un juego de concentración;
        debes estar atento y recordar dónde está cada carta para poder ser eficaz. \n\n
        Comienzas con un grupo de cartas boca abajo de modo que no sabes que hay detrás de ellas,
        pero las puedes voltear; para esto solo tienes que presionar sobre la carta que quieras. Puedes
        voltear dos cartas al mismo tiempo, y sí éstas dos son pareja permanecerán boca arriba hasta
        finalizar la partida, pero si no lo son se voltearán automáticamente después de un corto periodo de tiempo.
        Una pareja son dos cartas que están relacionadas, por ejemplo: un kanji y su significado,
        o un katakana o hiragana con su rōmaji.\n\n
        El objetivo es encontrar todas las parejas; cuando lo hagas habrás ganado.\n\n
        Recuerda que puedes escoger si quieres jugar con hiraganas, katakanas o kanjis.
        También puedes escoger el número de parejas.\n\n
        ¡Estás listo para jugar!
    </string>
    <string name="instructions_prguntados">El Preguntados es un juego de preguntas y respuestas,
        a que no te lo esperabas. Te vamos a ir dando preguntas y tú las debes responder en el
        tiempo dado. Las preguntas son una palabra en hiragana, katakana, kanji, u otros, y la
        respuesta correcta es aquella que se le asocia.\n\n
        Comienzas con una pregunta y unas opciones de respuesta, tú escoges la que creas correcta y
        avanzas a la siguiente pregunta. Si no respondes en el tiempo límite, se avanzará a la
        siguiente pregunta. El juego acaba cuando hayan pasado todas las preguntas. \n\n
        Al finalizar te mostraremos tus resultados para que puedas ver en qué fallaste y mejorar
        para la próxima vez. \n\n
        Recuerda que antes de empezar a jugar puedes decidir si quieres jugar con hiraganas,
        katakanas o kanjis. Además, puedes escoger el número de preguntas y el tiempo por pregunta. \n\n
        ¡Estás listo para jugar!
    </string>
    <string name="instructions_matchit">
        El juego de Match it, es un juego que te permite practicar la lectura del hiragana y el katakana por pequeños grupos.\n\n
        La idea es que te vamos a dar una palabra en hiragana o katakana y tú debes escribir su traducción en rōmaji.
        Cuando creas tener la respuesta, la podrás verificar con el botón de \"VERIFICAR\". Si está correcta podrás avanzar
        a la siguiente palabra, sino, podrás ver que aparece un texto con tú respuesta en verde y rojo, el verde indica las
        partes en las que acertaste, y el rojo en las que fallaste.\n\n
        Si tienes problemas con una palabra y no quieres responderla, encontrarás un botón \"SALTAR\" que te permite avanzar
        a la siguiente automáticamente. Y no te preocupes, si vuelves a jugar el mismo nivel, tendrás otra oportunidad
        para responderla.\n\n
        Notarás que debajo de la mayoría de las palabras en hiragana o katakana hay un texto en español. Este indica el
        significado real de la palabra mostrada. Si no lo tiene es porque no es una verdadera palabra del japonés.\n\n
        Recuerda que antes de empezar puedes escoger si jugar con hiragana o katakana, y el grupo de palabras con las
        que quieras jugar. Los grupos están divididos entre las filas normales del diccionario, por ejemplo \"la fila ka\".
        Aunque notarás que el primer grupo abarca tanto \"la fila a\" como la letra \"n\".\n\n
        Es importante que sepas que en cada grupo sólo te vamos a mostrar palabras que tienen hiraganas o katakanas
        de la fila escogida o de las filas anteriores a esta. Por ejemplo, si escoges "la fila sa" te podemos mostrar
        palabras compuestas tanto por esta fila como por \"la fila ka\" y \"la fila a y la n\".\n\n
        ¡Estás listo para jugar!
    </string>
    <string name="instruction">Instrucciones</string>
    <string name="playButton">¡A jugar!</string>
    <string name="kanji">Kanji</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>

    <string name="title_activity_detail">Regresar</string>
    <string name="hiragana1a">a</string>
    <string name="hiragana2i">i</string>
    <string name="hiragana3u">u</string>
    <string name="hiragana4e">e</string>
    <string name="hiragana5o">o</string>
    <string name="hiragana6ka">ka</string>
    <string name="hiragana7ki">ki</string>
    <string name="hiragana8ku">ku</string>
    <string name="hiragana10ko">ko</string>
    <string name="hiragana9ke">ke</string>
    <string name="hiragana11sa">sa</string>
    <string name="hiragana12shi">shi</string>
    <string name="hiragana13su">su</string>
    <string name="hiragana14se">se</string>
    <string name="hiragana15so">so</string>
    <string name="hiragana20to">to</string>
    <string name="hiragana21na">na</string>
    <string name="hiragana16ta">ta</string>
    <string name="hiragana17chi">chi</string>
    <string name="hiragana18tsu">tsu</string>
    <string name="hiragana19te">te</string>
    <string name="hiragana22ni">ni</string>
    <string name="hiragana23nu">nu</string>
    <string name="hiragana24ne">ne</string>
    <string name="hiragana25no">no</string>
    <string name="hiragana26ha">ha</string>
    <string name="hiragana27hi">hi</string>
    <string name="hiragana28fu">fu</string>
    <string name="hiragana29he">he</string>
    <string name="hiragana30ho">ho</string>
    <string name="hiragana32mi">mi</string>
    <string name="hiragana33mu">mu</string>
    <string name="hiragana34me">me</string>
    <string name="hiragana40ri">ri</string>
    <string name="hiragana31ma">ma</string>
    <string name="hiragana35mo">mo</string>
    <string name="hiragana36ya">ya</string>
    <string name="hiragana37yu">yu</string>
    <string name="hiragana38yo">yo</string>
    <string name="hiragana39ra">ra</string>
    <string name="hiragana42re">re</string>
    <string name="hiragana43ro">ro</string>
    <string name="hiragana44wa">wa</string>
    <string name="hiragana45wo">wo</string>
    <string name="hiragana46n">n</string>
    <string name="hiragana41ru">ru</string>
    <string name="hiragana47ga">ga</string>
    <string name="hiragana48gi">gi</string>
    <string name="hiragana49gu">gu</string>
    <string name="hiragana50ge">ge</string>
    <string name="hiragana51go">go</string>
    <string name="hiragana52za">za</string>
    <string name="hiragana53ji">ji</string>
    <string name="hiragana54zu">zu</string>
    <string name="hiragana55ze">ze</string>
    <string name="hiragana56zo">zo</string>
    <string name="hiragana57da">da</string>
    <string name="hiragana58di">di</string>
    <string name="hiragana59du">du</string>
    <string name="hiragana60de">de</string>
    <string name="hiragana61do">do</string>
    <string name="hiragana62ba">ba</string>
    <string name="hiragana63bi">bi</string>
    <string name="hiragana64bu">bu</string>
    <string name="hiragana65be">be</string>
    <string name="hiragana66bo">bo</string>
    <string name="hiragana67pa">pa</string>
    <string name="hiragana68pi">pi</string>
    <string name="hiragana69pu">pu</string>
    <string name="hiragana70pe">pe</string>
    <string name="hiragana71po">po</string>
    <string name="hiragana72kya">kya</string>
    <string name="hiragana73kyu">kyu</string>
    <string name="hiragana74kyo">kyo</string>
    <string name="hiragana75gya">gya</string>
    <string name="hiragana76gyu">gyu</string>
    <string name="hiragana77gyo">gyo</string>
    <string name="hiragana78sha">sha</string>
    <string name="hiragana79shu">shu</string>
    <string name="hiragana80sho">sho</string>
    <string name="hiragana81ja">ija</string>
    <string name="hiragana82ju">ju</string>
    <string name="hiragana83jo">jo</string>
    <string name="hiragana84cha">cha</string>
    <string name="hiragana85chu">chu</string>
    <string name="hiragana86cho">cho</string>
    <string name="hiragana87nya">nya</string>
    <string name="hiragana88nyu">nyu</string>
    <string name="hiragana89nyo">nyo</string>
    <string name="hiragana90hya">hya</string>
    <string name="hiragana92hyo">hyo</string>
    <string name="hiragana93bya">bya</string>
    <string name="hiragana94byu">byu</string>
    <string name="hiragana95byo">byo</string>
    <string name="hiragana96pya">pya</string>
    <string name="hiragana97pyu">pyu</string>
    <string name="hiragana98pyo">pyo</string>
    <string name="hiragana100mya">mya</string>
    <string name="hiragana101myu">myu</string>
    <string name="hiragana102myo">myo</string>
    <string name="hiragana103rya">rya</string>
    <string name="hiragana104ryu">ryu</string>
    <string name="hiragana105ryo">ryo</string>
    <string name="example">Ejemplo:</string>
    <string name="writting">Escritura</string>
    <string name="pronunciation">Pronunciacion:</string>
    <string name="buttonPractice">¡Practica los trazos!</string>
    <string-array name="preguntadosTiempo">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>infinito</item>
    </string-array>
    <string-array name="preguntadosNumPreguntas">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string-array name="matchitFilas">
        <item>a y n</item>
        <item>ka</item>
        <item>sa</item>
        <item>ta</item>
        <item>na</item>
        <item>ha</item>
        <item>ma</item>
        <item>ya</item>
        <item>ra</item>
        <item>wa</item>
        <item>ga</item>
        <item>za</item>
        <item>da</item>
        <item>ba</item>
        <item>pa</item>
        <item>kya</item>
        <item>gya</item>
        <item>sha</item>
        <item>ja</item>
        <item>cha</item>
        <item>nya</item>
        <item>hya</item>
        <item>bya</item>
        <item>pya</item>
        <item>mya</item>
        <item>rya</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
