<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.aprendamosjapones.aprendedamosjapones.View.CreateAcountActivity"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport='true'
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/activity_create_account_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userEmailRegistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userEmailRegistry"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/activity_create_account_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userNameRegistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userNameRegistry"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/activity_create_account_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userNicknameRegistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userNicknameRegistry"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/activity_create_account_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userPasswordRegistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPasswordRegistry"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/activity_create_account_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userConfirmPasswordRegistry"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/CreateAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userRegistryAccept"
                android:theme="@style/RaisedButtonDark"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>